<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    tools:context="coloring.org.jp.ktcc.full.app.activity.fragment.CropFragment"
    android:background="@color/bg_main"
    android:orientation="vertical"
    android:clickable="true">

    <!--
    custom:scv_background_color="@drawable/transparent_repeat_bright"
    -->

    <!--Top-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_bar"
        android:orientation="horizontal"
        android:background="@color/bg_action_bar"
        android:gravity="center"
        android:clickable="true">
        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="@dimen/icon_button_width"
            android:layout_height="@dimen/icon_button"
            android:background="@color/transparent"
            android:src="@drawable/ic_back"
            android:visibility="invisible"
            android:paddingRight="@dimen/padding_icon_button"/>

        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>

        <ImageButton
            android:id="@+id/btnLeftRotate"
            android:layout_width="@dimen/icon_button_width"
            android:layout_height="@dimen/icon_button"
            android:background="@color/transparent"
            android:src="@drawable/ic_rotate_left"/>
        <ImageButton
            android:id="@+id/btnRightRotate"
            android:layout_width="@dimen/icon_button_width"
            android:layout_height="@dimen/icon_button"
            android:background="@color/transparent"
            android:src="@drawable/ic_rotate_right"/>
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
        <ImageButton
            android:id="@+id/btnDone"
            android:layout_width="@dimen/icon_button_width"
            android:layout_height="@dimen/icon_button"
            android:background="@color/transparent"
            android:src="@drawable/ic_done"
            android:scaleType="fitCenter"
            android:padding="@dimen/icon_button_padding"/>


    </LinearLayout>

    <com.isseiaoki.simplecropview.CropImageView
        android:id="@+id/cropImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="@dimen/crop_spacing_xlarge"
        android:background="@drawable/transparent_repeat_bright"
        custom:scv_crop_mode="fit_image"
        custom:scv_frame_color="@color/crop_colorAccent"
        custom:scv_frame_stroke_weight="1dp"
        custom:scv_guide_color="@color/crop_colorAccent"
        custom:scv_guide_show_mode="not_show"
        custom:scv_guide_stroke_weight="1dp"
        custom:scv_handle_color="@color/crop_colorAccent"
        custom:scv_handle_show_mode="show_always"
        custom:scv_handle_size="14dp"
        custom:scv_min_frame_size="50dp"
        custom:scv_overlay_color="@color/crop_overlay"
        custom:scv_touch_padding="8dp"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_bottom_bar"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/crop_spacing_xsmall"
            android:paddingRight="@dimen/crop_spacing_xsmall">
            <Button
                android:id="@+id/buttonFree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/crop_spacing_xsmall"
                android:text="@string/free"
                style="@style/AppTheme.Button.Borderless"/>
            <Button
                android:id="@+id/buttonFitImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/crop_spacing_xsmall"
                android:text="@string/fit_image"
                style="@style/AppTheme.Button.Borderless"/>
            <Button
                android:id="@+id/button1_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/crop_spacing_xsmall"
                android:text="@string/square"
                style="@style/AppTheme.Button.Borderless"/>
            <Button
                android:id="@+id/buttonCircle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/crop_spacing_xsmall"
                android:text="@string/circle"
                style="@style/AppTheme.Button.Borderless"/>
            <Button
                android:id="@+id/button9_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/crop_spacing_xsmall"
                android:text="9:16"
                style="@style/AppTheme.Button.Borderless"/>
            <Button
                android:id="@+id/button3_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/crop_spacing_xsmall"
                android:text="3:4"
                style="@style/AppTheme.Button.Borderless"/>
            <Button
                android:id="@+id/button16_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/crop_spacing_xsmall"
                android:text="16:9"
                style="@style/AppTheme.Button.Borderless"/>
            <Button
                android:id="@+id/button4_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/crop_spacing_xsmall"
                android:text="4:3"
                style="@style/AppTheme.Button.Borderless"/>
            <Button
                android:visibility="gone"
                android:id="@+id/buttonCustom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/crop_spacing_xsmall"
                android:text="7:5"
                style="@style/AppTheme.Button.Borderless"/>
            <Button
                android:visibility="gone"
                android:id="@+id/buttonShowCircleButCropAsSquare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/crop_spacing_xsmall"
                android:text="@string/circle_square"
                style="@style/AppTheme.Button.Borderless"/>
        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>
